--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     <title>FutureBlueChip</title>
     <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
-    <link rel="icon" type="image/x-icon" href="assets/img/perfil.png">
+    <link rel="icon" type="image/x-icon" href="./assets/img/perfil.png">
 </head>
 
 <body>
@@ -115,7 +115,7 @@
 
             </div>
             <div class="skills__img">
-                <img src="assets/img/skills.gif" alt="">
+                <img src="./assets/img/Skills.gif" alt="">
             </div>
 
             <!------Contact Me------>
@@ -126,7 +126,7 @@
             </div>
         </section>
 
-        <!--===== PORTFOLIO =====-->
+        <!--==== PORTFOLIO =====-->
         <section class="portfolio section" id="portfolio">
             <h2 class="section-title">About the Owner & Founder of FBC</h2>
 
