--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <br /> <br /> <br />
                         - Previously has scaled multiple businesses to 6 & 7-Figures through digital marketing
                         <br /> <br /> <br />
-                        <span style="color:black">Email: hxsain@FBChips.org</span>
+                        <span style="color:black">Email: husain@FBChips.com</span>
 
                     </span>
 
