--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- ===== BOX ICONS ===== -->
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-    <title>FutureBlueChip</title>
+    <title>Future Blue Chips</title>
     <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
     <link rel="icon" type="image/x-icon" href="./assets/img/perfil.png">
 </head>
@@ -20,7 +20,7 @@
     <header class="l-header">
         <nav class="nav bd-grid">
             <div>
-                <a href="#" class="nav__logo">Future Blue Chip™</a>
+                <a href="#" class="nav__logo">Future Blue Chips™</a>
             </div>
 
             <div class="nav__menu" id="nav-menu">
@@ -140,7 +140,7 @@
                 </div>
                 <div class="portfolio__img">
 
-                    <span class="skills__name">
+                    <span class="skills1__name">
                         - Over 3+ years in digital marketing experience
 
                         <br /> <br /> <br />
@@ -156,7 +156,7 @@
                     <div class="about__social">
                         <a href="#" class="about__social-icon"><i class='bx bxl-linkedin'></i></a>
                         <a href="https://twitter.com/Cxmbo" class="about__social-icon"><i class='bx bxl-twitter'></i></a>
-                        <a href="https://www.instagram.com/fbchips/" class="about__social-icon"><i class='bx bxl-instagram'></i></a>
+                        <a href="https://www.instagram.com/hxsain.mgmt/" class="about__social-icon"><i class='bx bxl-instagram'></i></a>
 
                     </div>
 
