--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <title>Future Blue Chips</title>
     <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
     <link rel="icon" type="image/x-icon" href="./assets/img/perfil.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 </head>
 
 <body>
@@ -43,8 +52,10 @@
         <section class="home" id="home">
             <div class="home__container bd-grid">
                 <h1 class="home__title"><span>FBC</span><br></h1>
-
-                <img src="assets/img/perfil.png" alt="" class="home__img">
+                <p class ="home__text">Royalty in Your Own Fashion</p>
+                <div class = "home__img--wrapper">
+                    <img src="assets/img/favicon2.png" alt="" class="home__img">
+                </div>
             </div>
         </section>
 
@@ -54,7 +65,7 @@
 
             <div class="about__container bd-grid">
                 <div class="about__img">
-                    <img src="assets/img/perfil.png" alt="">
+                    <img src="assets/img/fbcface2.png" alt="">
                 </div>
 
                 <div>
@@ -97,13 +108,6 @@
                         experience for customers.
                     </span>
 
-
-                    <h3 class="skills__subtitle">Search Engine Optimization</h3>
-                    <span class="skills__name">We put your website infront of consumers at the time they are searching
-                        for your product and services, to maximize the web traffic.
-                    </span>
-
-
                     <h3 class="skills__subtitle">Social Media Adverts</h3>
                     <span class="skills__name">Through targeted exposure, we will advertise your product across all
                         social media platforms to maximize and get the attention of the consumer. Currently, over 3
@@ -115,29 +119,101 @@
 
             </div>
             <div class="skills__img">
-                <img src="./assets/img/Skills.gif" alt="">
+                <img src="./assets/img/offering.png" alt="">
             </div>
 
             <!------Contact Me------>
             <div class="contact-me">
-                <a class="button-two" href="https://calendly.com/futurebluechips/30min?month=2022-10"><span class = "border"
+                <a class="button-two" href="https://calendly.com/futurebluechips/30min?month=2022-10"><span
                     style="border-color:rgb(0, 0, 0);">Speak To Our Team Today </span> <br /> <span
                         style="border-color:rgb(0, 0, 0);">Schedule Your FREE Audit Call Now</span></a>
             </div>
         </section>
 
+        <!--- Meet the team -->
+
+    <div class="container-fluid padding">
+        <div class="row welcome text-center">
+            <div class="col-12">
+                <h1 class="display-4">Meet the Team</h1>
+            </div>
+            <hr>
+        </div>
+    </div>
+
+
+    <!--- Cards -->
+
+    <div class="container-fluid padding">
+        <div class="row padding">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class = "husain">
+                        <img class="card-img-top " src="assets/img/husainnormal3.png">
+                    </div>
+                    <div class="card-body">
+                        <h4 class="card-title">Husain J</h4>
+                        <p class="card-text">Has built up a following of over 350,000+ across social media platforms using previous knowledge of personal marketing + management. 
+                        </p>
+                        <p class="card-text">Over 3+ years of experience in social media marketing, web design and optimization.
+                        </p>
+                        <p class="card-text">Over 3+ years of experience in digital management through major E-Sports organizations and Web3</p>
+                        <p class="card-text">• Has scaled numerous businesses to 6 & 7-Figures through digital marketing and management.
+                        </p>
+                        <p class="card-text">Has a degree in psychology & is bilingual in English & French. </p>
+                        <div class="about__social">
+                            <a href="https://ca.linkedin.com/in/husain-jaffer-b7048b24b?trk=people-guest_people_search-card " class="about__social-icon"><i class='bx bxl-linkedin'></i></a>
+                            <a href="https://twitter.com/hxsain" class="about__social-icon"><i class='bx bxl-twitter'></i></a>
+                            <a href="https://www.instagram.com/hxsain.mgmt/" class="about__social-icon"><i class='bx bxl-instagram'></i></a>
+    
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card">
+                    <div class = "roy">
+                        <img class="card-img-top" src="assets/img/roynormal5.png">
+                    </div>
+                        <div class="card-body">
+                        <h4 class="card-title">Roy M</h4>
+                        <p class="card-text">Co Founder of Future Blue Chips.</p>
+                        <p class="card-text">Over 5+ years of experience with Social Media Expansion
+                        </p>
+                        <p class="card-text">Specializes in Instagram, YouTube, Twitter, and Tiktok</p>
+                        <p class="card-text">Has a degree in business,  major in art & media management
+                            </p>
+                        <p class="card-text">Bilingual in English & Chinese 
+
+                            </p>
+                        <div class="about__social">
+                            <a href="https://www.linkedin.com/in/roy-ma-0b586b237/ " class="about__social-icon"><i class='bx bxl-linkedin'></i></a>
+                            <a href="https://twitter.com/roywo " class="about__social-icon"><i class='bx bxl-twitter'></i></a>
+    
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
         <!--==== PORTFOLIO =====-->
+        <!--=== 
         <section class="portfolio section" id="portfolio">
             <h2 class="section-title">About the Owner & Founder of FBC</h2>
 
             <div class="portfolio__container portfolio-bd-grid">
+            <div class = "portfolio__img--wrapper">
                 <div class="portfolio__img">
-                    <img src="assets/img/work2.jpg" alt="">
+                    <img class = "img_of_port" src="assets/img/work2.jpg" alt="">
                     <div class="portfolio__link">
                         <a href="#" class="portfolio__link-name"></a>
                     </div>
 
                 </div>
+            </div>
+            <div class = "portfolio__img--wrapper">
                 <div class="portfolio__img">
 
                     <span class="skills1__name">
@@ -154,8 +230,8 @@
                     </span>
 
                     <div class="about__social">
-                        <a href="#" class="about__social-icon"><i class='bx bxl-linkedin'></i></a>
-                        <a href="https://twitter.com/Cxmbo" class="about__social-icon"><i class='bx bxl-twitter'></i></a>
+                        <a href="https://ca.linkedin.com/in/husain-jaffer-b7048b24b?trk=people-guest_people_search-card " class="about__social-icon"><i class='bx bxl-linkedin'></i></a>
+                        <a href="https://twitter.com/hxsain" class="about__social-icon"><i class='bx bxl-twitter'></i></a>
                         <a href="https://www.instagram.com/hxsain.mgmt/" class="about__social-icon"><i class='bx bxl-instagram'></i></a>
 
                     </div>
@@ -164,7 +240,9 @@
 
                 </div>
             </div>
+            </div>
         </section>
+        === -->
 
 
 
@@ -174,7 +252,7 @@
             <div class="footer__container bd-grid">
                 <div class="footer__data">
                     <h2 class="footer__title">Future Blue Chips</h2>
-                    <p class="footer__text">"Live it Digital"</p>
+                    <p class="footer__text">"Royalty in Your Own Fashion"</p>
                 </div>
 
                 <div class="footer__data">
@@ -183,7 +261,6 @@
                         <li><a href="#home" class="footer__link">Home</a></li>
                         <li><a href="#about" class="footer__link">About</a></li>
                         <li><a href="#skills" class="footer__link">Services</a></li>
-                        <li><a href="#portfolio" class="footer__link">Contact Us </a></li>
                     </ul>
                 </div>
 
@@ -191,7 +268,7 @@
                     <h2 class="footer__title">Socials</h2>
                     <a href="https://www.instagram.com/fbchips/" class="footer__social"><i
                             class='bx bxl-instagram'></i></a>
-                    <a href="https://twitter.com/Cxmbo" class="footer__social"><i class='bx bxl-twitter'></i></a>
+                    <a href="https://twitter.com/hxsain" class="footer__social"><i class='bx bxl-twitter'></i></a>
                     <a href="https://www.tiktok.com/@futurebluechips" class="footer__social"><iconify-icon icon="bxl:tiktok"></iconify-icon></a>
                 </div>
 
