--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     <title>Future Blue Chips</title>
     <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
-    <link rel="icon" type="image/x-icon" href="./assets/img/perfil.png">
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon2.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -153,7 +153,7 @@
                     </div>
                     <div class="card-body">
                         <h4 class="card-title">Husain J</h4>
-                        <p class="card-text">Has built up a following of over 350,000+ across social media platforms using previous knowledge of personal marketing + management. 
+                        <p class="card-text">Has built up a following of over 350,000+ across social media platforms using previous knowledge of personal marketing & management. 
                         </p>
                         <p class="card-text">Over 3+ years of experience in social media marketing, web design and optimization.
                         </p>
