--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
                         more.
 
                         We are a very selective brand looking to work with organizations that hold significant potential
-                        (a Future Blue Chip) to be showcased across our social media platforms (350,000+ Following +
-                        1,000,000+ monthly outreach and growing)
+                        (a Future Blue Chip) to be showcased across our social media platforms
 
                         Over the last year, collectively we have worked with the best in the industry to produce
                         hundreds upon thousands of dollars through the tactics of social media marketing, web design and
@@ -158,7 +157,7 @@
                         <p class="card-text">Over 3+ years of experience in social media marketing, web design and optimization.
                         </p>
                         <p class="card-text">Over 3+ years of experience in digital management through major E-Sports organizations and Web3</p>
-                        <p class="card-text">• Has scaled numerous businesses to 6 & 7-Figures through digital marketing and management.
+                        <p class="card-text">Has scaled numerous businesses to 6 & 7-Figures through digital marketing and management.
                         </p>
                         <p class="card-text">Has a degree in psychology & is bilingual in English & French. </p>
                         <div class="about__social">
@@ -181,7 +180,7 @@
                         <p class="card-text">Over 5+ years of experience with Social Media Expansion
                         </p>
                         <p class="card-text">Specializes in Instagram, YouTube, Twitter, and Tiktok</p>
-                        <p class="card-text">Has a degree in business,  major in art & media management
+                        <p class="card-text">Has a degree in business, a major in art & media management
                             </p>
                         <p class="card-text">Bilingual in English & Chinese 
 
